Patch test runtime